--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
         </div>
         <h2 class="expert-heading my-6">What NEET Aspirants say about us...</h2>
         <div class="slider_nav">
-            <button class="btn btn-outline-dark py-0 btn-next">Next</button>
-            <button class="btn btn-outline-dark py-0 btn-prev">Previous</button>
+            <button class="btn-prev"><i class="fa-solid fa-left-long"></i></button>
+            <button class="btn-next"><i class="fa-solid fa-right-long"></i></button>
         </div>
         <div class="owl-carousel youtube-link" id="owl-carousel">
             <div class="youtube-item">
@@ -132,8 +132,8 @@
             <h4 class="mx-2">What clients say about us...</h4>
         </div>
         <div class="slider_nav">
-            <button class="btn btn-outline-dark py-0 am-next">Next</button>
-            <button class="btn btn-outline-dark py-0 am-prev">Previous</button>
+            <button class="am-prev"><i class="fa-solid fa-left-long"></i></button>
+            <button class="am-next"><i class="fa-solid fa-right-long"></i></button>
         </div>
         <div class="owl-carousel" id="testimonial-owl-carousel">
             <div>
@@ -252,7 +252,7 @@
                 autoHeight: true,
                 rewind: true,
                 nav: true,
-                navText: [$('.am-next'), $('.am-prev')],
+                navText: [$('.am-prev'), $('.am-next')],
                 responsive: {
                     0: {
                         nav: true,
@@ -273,7 +273,7 @@
                 loop: true,
                 nav: true,
                 rewind: true,
-                navText: [$('.btn-next'), $('.btn-prev')],
+                navText: [$('.btn-prev'), $('.btn-next')],
                 responsive: {
                     0: {
                         items: 1,
