--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 <body>
     <section class="hero">
         <div class="hero-top mb-2">
-            <img src="./assets/images/logo.webp" alt="Neet Logo">
+            <img width="120px" height="75px" src="./assets/images/logo.webp" alt="Neet Logo">
             <div class="font-size">About Us <i class="fa-solid fa-angle-down"></i></div>
         </div>
         <div class="hero-img">
-            <img src="./assets/images/herodoc.webp" alt="">
+            <img width="490px" height="620px" src="./assets/images/herodoc.webp" alt="">
         </div>
         <div class="hero-content">
             <h1 class="color-main my-4"><img width="37px" height="37px" class="mx-2" src="./assets/images/about.webp"
@@ -64,7 +64,7 @@
                 medical college?</p>
         </div>
         <div class="agenda-img">
-            <img src="./assets/images/DOCTOR 2ND PAGE.webp" alt="">
+            <img width="407px" height="520px" src="./assets/images/DOCTOR 2ND PAGE.webp" alt="">
         </div>
     </section>
 
@@ -73,7 +73,7 @@
             <h2 class="expert-heading">Exclusive Webinar By Doctors & Counselling Experts</h2>
             <div class="col-lg-4 col-md-6 expert-card">
                 <div class="card-head">
-                    <img class="card-img" src="./assets/images/Mr. Vipin sir.webp" alt="">
+                    <img width="305px" height="351px" class="card-img" src="./assets/images/Mr. Vipin sir.webp" alt="">
                 </div>
                 <div class="card-content">
                     <h4>Mr. VIPIN BANSAL </h4>
@@ -82,7 +82,7 @@
             </div>
             <div class="col-lg-4 col-md-6 expert-card">
                 <div class="card-head">
-                    <img class="card-img" src="./assets/images/Dr. Harshit Pathak.webp" alt="">
+                    <img width="305px" height="351px" class="card-img" src="./assets/images/Dr. Harshit Pathak.webp" alt="">
                 </div>
                 <div class="card-content">
                     <h4>Dr. HARSHIT PATHAK</h4>
@@ -91,7 +91,7 @@
             </div>
             <div class="col-lg-4 col-md-6 expert-card">
                 <div class="card-head">
-                    <img class="card-img" src="./assets/images/Dr. Uzma.webp" alt="">
+                    <img width="305px" height="351px" class="card-img" src="./assets/images/Dr. Uzma.webp" alt="">
                 </div>
                 <div class="card-content">
                     <h4>Dr. UZMA HASAN</h4>
@@ -194,14 +194,14 @@
     <section class="footer">
         <div class="row align-items-center">
             <div class="col-lg-4 footer-1">
-                <img width="180px" class="mb-3" src="./assets/images/logo.webp" alt="logo">
+                <img width="180px" height="114px" class="mb-3" src="./assets/images/logo.webp" alt="logo">
                 <div class="social-link">
                     <h5>Follow Us</h5>
                     <div class="link-items">
-                        <img height="30px" src="./assets/images/FACEBOOK.webp" alt="">
-                        <img height="30px" src="./assets/images/INSTAGRAM.webp" alt="">
-                        <img height="30px" src="./assets/images/TWITTER.webp" alt="">
-                        <img height="30px" src="./assets/images/YOUTUBE.webp" alt="">
+                        <img height="30px" width="30px" src="./assets/images/FACEBOOK.webp" alt="">
+                        <img height="30px" width="30px" src="./assets/images/INSTAGRAM.webp" alt="">
+                        <img height="30px" width="30px" src="./assets/images/TWITTER.webp" alt="">
+                        <img height="30px" width="45px" src="./assets/images/YOUTUBE.webp" alt="">
                     </div>
                 </div>
             </div>
