--- a/index.html
+++ b/index.html
@@ -240,11 +240,9 @@
                 <div class="contact">
                     Call : 9911203280
                 </div>
-                <!-- <input id="email" name="email" type="text" placeholder="Your Email..."> -->
-                <!-- <button onclick="subscript()">SUBSCRIBE</button> -->
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfgUfUzUTCuZybBlaiS4tAPZWue8ByP2QWkXvtOV54idPM-Yg/viewform?usp=sf_link" target="_blank">SUBSCRIBE NOW</a>
-                <!-- <h5 class="responsealert my-2"> Thank you for subscrive us..</h5> -->
-                <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfgUfUzUTCuZybBlaiS4tAPZWue8ByP2QWkXvtOV54idPM-Yg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
+                <input id="email" name="email" type="text" placeholder="Your Email...">
+                <button onclick="subscript()">SUBSCRIBE</button>
+                <h5 class="responsealert my-2"> Thank you for subscrive us..</h5>
             </div>
         </div>
     </section>
