custom google form

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="hero">
         <div class="hero-top mb-2">
             <img width="120px" height="75px" src="./assets/images/logo.webp" alt="Neet Logo">
-            <div class="font-size">About Us <i class="fa-solid fa-angle-down"></i></div>
+            <a href="#agenda" class="font-size">About Us <i class="fa-solid fa-angle-down"></i></a>
         </div>
         <div class="hero-img">
             <img width="490px" height="620px" src="./assets/images/herodoc.webp" alt="">
@@ -42,7 +42,7 @@
             <button class="btn border-0">Register Now</button>
         </div>
     </section>
-    <section class="agenda">
+    <section class="agenda" id="agenda">
         <div class="agenda-content">
             <h2>Webinar Agenda</h2>
             <p><img src="./assets/images/click.webp" alt="click img"> How to score 600+ in NEET UG 2023?</p>
@@ -236,14 +236,16 @@
                     </p>
                 </div>
             </div>
-            <div class="col-lg-4 footer-3">
+
+            <form action="https://docs.google.com/forms/d/e/1FAIpQLSfgUfUzUTCuZybBlaiS4tAPZWue8ByP2QWkXvtOV54idPM-Yg/formResponse" class="col-lg-4 footer-3">
                 <div class="contact">
                     Call : 9911203280
                 </div>
-                <input id="email" name="email" type="text" placeholder="Your Email...">
-                <button onclick="subscript()">SUBSCRIBE</button>
+                <input  name="entry.586680301" type="text" placeholder="Your Email...">
+                <button type="submit">SUBSCRIBE</button>
+                <!-- <button onclick="subscript()">SUBSCRIBE</button> -->
                 <h5 class="responsealert my-2"> Thank you for subscrive us..</h5>
-            </div>
+            </form>
         </div>
     </section>
     <div class="copyright text-center py-3">
