--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         </div>
         <h2 class="expert-heading my-6">What NEET Aspirants say about us...</h2>
         <div class="slider_nav">
-            <button class="btn-prev"><i class="fa-solid fa-left-long"></i></button>
-            <button class="btn-next"><i class="fa-solid fa-right-long"></i></button>
+            <button class="btn-prev"><i class="fas fa-chevron-left"></i></button>
+            <button class="btn-next"><i class="fas fa-chevron-right"></i></button>
         </div>
         <div class="owl-carousel youtube-link" id="owl-carousel">
             <div class="youtube-item">
@@ -133,8 +133,8 @@
             <h4 class="mx-2">What clients say about us...</h4>
         </div>
         <div class="slider_nav">
-            <button class="am-prev"><i class="fa-solid fa-left-long"></i></button>
-            <button class="am-next"><i class="fa-solid fa-right-long"></i></button>
+            <button class="am-prev"><i class="fas fa-chevron-left"></i></button>
+            <button class="am-next"><i class="fas fa-chevron-right"></i></button>
         </div>
         <div class="owl-carousel" id="testimonial-owl-carousel">
             <div>
@@ -200,16 +200,16 @@
                     <h5>Follow Us</h5>
                     <div class="link-items">
                         <a href="https://www.facebook.com/NEETADVISOR" target="_blank">
-                            <img height="30px" width="30px" src="./assets/images/FACEBOOK.webp" alt="facebook page">
+                            <img height="30px" width="30px" src="./assets/images/FACEBOOK.png" alt="facebook page">
                         </a>
                         <a href="https://www.instagram.com/neetadvisor_com/" target="_blank">
                             <img height="30px" width="30px" src="./assets/images/INSTAGRAM.webp" alt="instagra page">
                         </a>
                         <a href="https://www.linkedin.com/company/neetadvisordotcom/?originalSubdomain=in" target="_blank">
-                            <i class="fa-brands fa-linkedin fa-2xl"></i>
+                            <img height="30px" width="30px" src="./assets/images/linked.png" alt="linkedin">
                         </a>
                         <a href="https://www.youtube.com/channel/UCiJqbK5EeRtijkCgqwP5e4A" target="_blank">
-                            <img height="30px" width="45px" src="./assets/images/YOUTUBE.webp" alt="youtube page">
+                            <img height="30px" width="45px" src="./assets/images/YOUTUBE.png" alt="youtube page">
                         </a>
                     </div>
                 </div>
