--- a/index.html
+++ b/index.html
@@ -46,22 +46,14 @@
         <div class="agenda-content">
             <h2>Webinar Agenda</h2>
             <p><img src="./assets/images/click.webp" alt="click img"> How to score 600+ in NEET UG 2023?</p>
-            <p><img src="./assets/images/click.webp" alt="click img"> Mistakes committed by an medical aspirant scoring
-                good NEET Score. (500+/600+)</p>
-            <p><img src="./assets/images/click.webp" alt="click img"> Tips and tricks to get a medical seat at low
-                NEET score. (150+/250+/350+)</p>
-            <p><img src="./assets/images/click.webp" alt="click img"> How to get a dream medical college in your budget?
-            </p>
-            <p><img src="./assets/images/click.webp" alt="click img"> 15% AIQ/AIIMS/ JIPMER/ AFMC/ ESI/ Deemed/ State
-                Quota Counselling.</p>
-            <p><img src="./assets/images/click.webp" alt="click img"> Impact of increase in no of medical colleges/
-                fees/
-                seats/ reservations/ eligibility norms.</p>
-            <p><img src="./assets/images/click.webp" alt="click img"> Rank vs Marks analysis/ Last three year trend/ Cut
-                offs/ Documentation.</p>
+            <p><img src="./assets/images/click.webp" alt="click img">Mistakes committed by a medical aspirant scoring good NEET Score.</p>
+            <p><img src="./assets/images/click.webp" alt="click img">Tips and tricks to get a medical seat at low NEET score.</p>
+            <p><img src="./assets/images/click.webp" alt="click img">How to get a dream college in your fee budget ?</p>
+            <p><img src="./assets/images/click.webp" alt="click img">15% AIQ/ AIIMS/ JIPMER/ Deemed/ AFMC/ State Quota Counselling.</p>
+            <p><img src="./assets/images/click.webp" alt="click img">How to crack Multiple state quota counselling and their eligibility norms ?</p>
+            <p><img src="./assets/images/click.webp" alt="click img">NMC Guidelines/ Counselling Schedule/ Cutoffs/ Documents Required.</p>
             <p><img src="./assets/images/click.webp" alt="click img"> How to crack Multiple state quota counselling.</p>
-            <p><img src="./assets/images/click.webp" alt="click img"> How NEET ADVISOR can help you to get into a good
-                medical college?</p>
+            <p><img src="./assets/images/click.webp" alt="click img">How NEET ADVISOR can help you to get into a good medical college?</p>
         </div>
         <div class="agenda-img">
             <img width="407px" height="520px" src="./assets/images/DOCTOR 2ND PAGE.webp" alt="">
