--- a/index.html
+++ b/index.html
@@ -46,14 +46,21 @@
         <div class="agenda-content">
             <h2>Webinar Agenda</h2>
             <p><img src="./assets/images/click.webp" alt="click img"> How to score 600+ in NEET UG 2023?</p>
-            <p><img src="./assets/images/click.webp" alt="click img">Mistakes committed by a medical aspirant scoring good NEET Score.</p>
-            <p><img src="./assets/images/click.webp" alt="click img">Tips and tricks to get a medical seat at low NEET score.</p>
+            <p><img src="./assets/images/click.webp" alt="click img">Mistakes committed by a medical aspirant scoring
+                good NEET Score.</p>
+            <p><img src="./assets/images/click.webp" alt="click img">Tips and tricks to get a medical seat at low NEET
+                score.</p>
             <p><img src="./assets/images/click.webp" alt="click img">How to get a dream college in your fee budget ?</p>
-            <p><img src="./assets/images/click.webp" alt="click img">15% AIQ/ AIIMS/ JIPMER/ Deemed/ AFMC/ State Quota Counselling.</p>
-            <p><img src="./assets/images/click.webp" alt="click img">How to crack Multiple state quota counselling and their eligibility norms ?</p>
-            <p><img src="./assets/images/click.webp" alt="click img">NMC Guidelines/ Counselling Schedule/ Cutoffs/ Documents Required.</p>
-            <p><img src="./assets/images/click.webp" alt="click img"> How to crack Multiple state quota counselling.</p>
-            <p><img src="./assets/images/click.webp" alt="click img">How NEET ADVISOR can help you to get into a good medical college?</p>
+            <p><img src="./assets/images/click.webp" alt="click img">15% AIQ/ AIIMS/ JIPMER/ Deemed/ AFMC/ State Quota
+                Counselling.</p>
+            <p><img src="./assets/images/click.webp" alt="click img"> Impact of increase in no of medical colleges/
+                fees/ seats/ reservations/ eligibility norms.</p>
+            <p><img src="./assets/images/click.webp" alt="click img">NMC Guidelines/ Counselling Schedule/ Cutoffs/
+                Documents Required.</p>
+            <p><img src="./assets/images/click.webp" alt="click img">How to crack Multiple state quota counselling and
+                their eligibility norms ?</p>
+            <p><img src="./assets/images/click.webp" alt="click img">How NEET ADVISOR can help you to get into a good
+                medical college?</p>
         </div>
         <div class="agenda-img">
             <img width="407px" height="520px" src="./assets/images/DOCTOR 2ND PAGE.webp" alt="">
@@ -197,7 +204,8 @@
                         <a href="https://www.instagram.com/neetadvisor_com/" target="_blank">
                             <img height="30px" width="30px" src="./assets/images/INSTAGRAM.webp" alt="instagra page">
                         </a>
-                        <a href="https://www.linkedin.com/company/neetadvisordotcom/?originalSubdomain=in" target="_blank">
+                        <a href="https://www.linkedin.com/company/neetadvisordotcom/?originalSubdomain=in"
+                            target="_blank">
                             <img height="30px" width="30px" src="./assets/images/linked.png" alt="linkedin">
                         </a>
                         <a href="https://www.youtube.com/channel/UCiJqbK5EeRtijkCgqwP5e4A" target="_blank">
@@ -229,11 +237,13 @@
                 </div>
             </div>
 
-            <form action="https://docs.google.com/forms/d/e/1FAIpQLSfgUfUzUTCuZybBlaiS4tAPZWue8ByP2QWkXvtOV54idPM-Yg/formResponse" class="col-lg-4 footer-3">
+            <form
+                action="https://docs.google.com/forms/d/e/1FAIpQLSfgUfUzUTCuZybBlaiS4tAPZWue8ByP2QWkXvtOV54idPM-Yg/formResponse"
+                class="col-lg-4 footer-3">
                 <div class="contact">
                     Call : 9911203280
                 </div>
-                <input  name="entry.586680301" type="text" placeholder="Your Email...">
+                <input name="entry.586680301" type="text" placeholder="Your Email...">
                 <button type="submit">SUBSCRIBE</button>
                 <!-- <button onclick="subscript()">SUBSCRIBE</button> -->
                 <h5 class="responsealert my-2"> Thank you for subscrive us..</h5>
