--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <a href="#agenda" class="font-size">About Us <i class="fa-solid fa-angle-down"></i></a>
         </div>
         <div class="hero-img">
-            <img width="490px" height="620px" src="./assets/images/herodoc.webp" alt="">
+            <img width="490px" src="./assets/images/herodoc.webp" alt="">
         </div>
         <div class="hero-content">
             <h1 class="color-main my-4"><img width="37px" height="37px" class="mx-2" src="./assets/images/about.webp"
-                    alt="about image"> LIVE Webinar</h1>
-            <h3 class="font-size">NEET UG 2023</h3>
+                    alt="about image"> <span class="text-white">Attend&nbsp;</span> LIVE Webinar</h1>
+            <h3 class="font-size">on NEET UG 2023</h3>
             <h4 class="font-size">Admissions & Counselling Process</h4>
             <h5 class="font-size">Know All About NEET UG Medical <br> Admissions/Counselling process/Cutoffs/fees</h5>
             <h6 class="font-size">Saturday, 11:30 AM, 18th March. 2023</h6>
@@ -64,7 +64,7 @@
                 medical college?</p>
         </div>
         <div class="agenda-img">
-            <img width="407px" height="520px" src="./assets/images/DOCTOR 2ND PAGE.webp" alt="">
+            <img width="407px" src="./assets/images/DOCTOR 2ND PAGE.webp" alt="">
         </div>
     </section>
 
@@ -73,7 +73,7 @@
             <h2 class="expert-heading">Exclusive Webinar By Doctors & Counselling Experts</h2>
             <div class="col-lg-4 col-md-6 expert-card">
                 <div class="card-head">
-                    <img width="305px" height="351px" class="card-img" src="./assets/images/Mr. Vipin sir.webp" alt="">
+                    <img width="305px" class="card-img" src="./assets/images/Mr. Vipin sir.webp" alt="">
                 </div>
                 <div class="card-content">
                     <h4>Mr. VIPIN BANSAL </h4>
@@ -82,7 +82,7 @@
             </div>
             <div class="col-lg-4 col-md-6 expert-card">
                 <div class="card-head">
-                    <img width="305px" height="351px" class="card-img" src="./assets/images/Dr. Harshit Pathak.webp"
+                    <img width="305px" class="card-img" src="./assets/images/Dr. Harshit Pathak.webp"
                         alt="">
                 </div>
                 <div class="card-content">
@@ -92,7 +92,7 @@
             </div>
             <div class="col-lg-4 col-md-6 expert-card">
                 <div class="card-head">
-                    <img width="305px" height="351px" class="card-img" src="./assets/images/Dr. Uzma.webp" alt="">
+                    <img width="305px" class="card-img" src="./assets/images/Dr. Uzma.webp" alt="">
                 </div>
                 <div class="card-content">
                     <h4>Dr. UZMA HASAN</h4>
@@ -129,8 +129,7 @@
 
     <section class="testimonial">
         <div class="testimonial-heading">
-            <h2>Testimonials</h2>
-            <h4 class="mx-2">What clients say about us...</h4>
+            <h2>What clients say about us...</h2>
         </div>
         <div class="slider_nav">
             <button class="am-prev"><i class="fas fa-chevron-left"></i></button>
