--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
             <img width="490px" src="./assets/images/herodoc.webp" alt="">
         </div>
         <div class="hero-content">
-            <h1 class="color-main my-4"><img width="37px" height="37px" class="mx-2" src="./assets/images/about.webp"
-                    alt="about image"> <span class="text-white">Attend&nbsp;</span> LIVE Webinar</h1>
+            <h1 class="color-main my-2"><img width="37px" height="37px" class="mx-2" src="./assets/images/about.webp"
+                    alt="about image"> <span class="text-white">Attend&nbsp;</span> Exclusive Seminar</h1>
             <h3 class="font-size">on NEET UG 2023</h3>
             <h4 class="font-size">Admissions & Counselling Process</h4>
             <h5 class="font-size">Know All About NEET UG Medical <br> Admissions/Counselling process/Cutoffs/fees</h5>
-            <h6 class="font-size">Saturday, 11:30 AM, 18th March. 2023</h6>
-            <button class="btn border-0">Register Now</button>
+            <h6 class="font-size"> <br><span class="text-white"> Date &  Time: </span> Sunday, 3:30 PM, 14th May 2023 <br> <br> <span class="text-white"> Vanue: </span> Thakur College of Engineering and Technology, A-Block, Gate No 5, <br> Shyamnarayan Thakur Rd, Kandivali East, Mumbai - 400101</h6>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScH3zu0bP_wuQRxMpu5zlZDM0RWEwgt-kr4wGJenLJD0bElaA/viewform" target="_blank" class="btn border-0">Register Now</a>
         </div>
     </section>
     <section class="agenda" id="agenda">
         <div class="agenda-content">
-            <h2>Webinar Agenda</h2>
+            <h2>Seminar Agenda</h2>
             <p><img src="./assets/images/click.webp" alt="click img"> How to score 600+ in NEET UG 2023?</p>
             <p><img src="./assets/images/click.webp" alt="click img">Mistakes committed by a medical aspirant scoring
                 good NEET Score.</p>
@@ -69,7 +69,7 @@
 
     <section class="experts text-center">
         <div class="row g-3 my-5">
-            <h2 class="expert-heading">Exclusive Webinar By Doctors & Counselling Experts</h2>
+            <h2 class="expert-heading">Exclusive Seminar By Doctors & Counselling Experts</h2>
             <div class="col-lg-4 col-md-6 expert-card">
                 <div class="card-head">
                     <img width="305px" class="card-img" src="./assets/images/Mr. Vipin sir.webp" alt="">
