--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h3 class="font-size">on NEET UG 2023</h3>
             <h4 class="font-size">Admissions & Counselling Process</h4>
             <h5 class="font-size">Know All About NEET UG Medical <br> Admissions/Counselling process/Cutoffs/fees</h5>
-            <h6 class="font-size"> <br><span class="text-white"> Date &  Time: </span> Sunday, 3:30 PM, 14th May 2023 <br> <br> <span class="text-white"> Vanue: </span> Thakur College of Engineering and Technology, A-Block, Gate No 5, <br> Shyamnarayan Thakur Rd, Kandivali East, Mumbai - 400101</h6>
+            <h6 class="font-size"> <br><span class="text-white"> Date & Time : </span> Sunday, 3:30 PM, 14th May 2023 <br> <br> <span class="text-white"> Venue : </span> Thakur College of Engineering and Technology, A-Block, Gate No 5, <br> Shyamnarayan Thakur Rd, Kandivali East, Mumbai - 400101</h6>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLScH3zu0bP_wuQRxMpu5zlZDM0RWEwgt-kr4wGJenLJD0bElaA/viewform" target="_blank" class="btn border-0">Register Now</a>
         </div>
     </section>
