--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./assets/images/click.png" />
     <!-- fontawesome Icons -->
     <script src="https://kit.fontawesome.com/21ee09d439.js" crossorigin="anonymous"></script>
     <!-- owl carousel -->
