--- a/index.html
+++ b/index.html
@@ -250,6 +250,16 @@
             </form>
         </div>
     </section>
+
+    <div style="position: relative;">
+        <a href="tel:+919911203280" class="call-me">
+          <img src="/assets/images/call.png" alt="">
+        </a>
+        <a href="https://api.whatsapp.com/send?text=Hello how we can help you ? &amp;phone=9911203280" class="whatsapp-me"  target="_blank">
+          <img height="30px" width="30px" src="/assets/images/whatsapp.webp" alt="">
+        </a>
+    </div>
+
     <div class="copyright text-center py-3">
         <h2>All Rights Reserved Copyright NEET Advisor © 2023</h2>
         <h3>Privacy Policy I Terms & Refund Policy I Sitemap</h3>
